# DatabaseMigrationUtility-6256

./: CMakeLists.txt  README.md  main.cpp
config/: config.example
migration/: data_migration.cpp  data_migration.h  schema_migration.cpp  schema_migration.h
tests/: test_db_helper.cpp
utility/: config_helper.cpp  config_helper.h  db_helper.cpp  db_helper.h  logger.cpp  logger.h
